--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ ul {
 .showcase {
     width: 100%;
     height: 400px;
-    background: url('../img/home.jpg') no-repeat center center/cover;
+    background: url('../img/showcase.jpg') no-repeat center center/cover;
     display: flex;
     flex-direction: column;
     align-items: center;
