--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    margin-bottom: 40px;
 }
 
 .home-cards img {
@@ -121,4 +122,8 @@ ul {
     color: #0067b8;
     text-transform: uppercase;
     font-weight: bold;
+}
+
+.home-cards a:hover i {
+    margin-left: 10px;
 }
