--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,19 @@ ul {
 .home-cards a:hover i {
     margin-left: 10px;
 }
+
+/* Xbox */
+.xbox {
+    width: 100%;
+    height: 350px;
+    background: url('../img/xbox.jpg') no-repeat center center/cover;
+}
+
+.xbox .content {
+    width: 40%;
+    padding: 50px 0 0 30px;
+}
+
+.xbox p {
+    margin: 10px 0 20px;
+}
