mobile ver home and xbox section

--- a/css/style.css
+++ b/css/style.css
@@ -239,3 +239,17 @@ ul {
     margin-bottom: 20px;
 }
 
+@media screen and (max-width: 700px) {
+    .home-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .xbox .content p {
+        display: none;
+    }
+
+    .xbox .content h2 {
+        margin-bottom: 20px;
+        margin-top: 50px;
+    }
+}
