--- a/css/style.css
+++ b/css/style.css
@@ -252,4 +252,12 @@ ul {
         margin-bottom: 20px;
         margin-top: 50px;
     }
+
+    .carbon .content {
+        width: 85%;
+    }
+
+    .links .links-inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
